--- a/Assignments/Team Lead - T N Sangeetha/index.html
+++ b/Assignments/Team Lead - T N Sangeetha/index.html
@@ -25,19 +25,25 @@
 
     <div class="container1">
         <div class="upper">
-            <div class="image1"><img src="C:\Users\T N SANGEETHA\Downloads\Professional-CV-main\Professional-CV-main\111719205053.jpg"></div>
+            <div class="image1"><img src="C:\IBM-Project-23251-1659874556\Assignments\Team Lead - T N Sangeetha\111719205053.jpg"></div>
             <h1 class="name1">T N Sangeetha</h1>
-            <p2 class="para">Graphic Designer & Web Developer</p2>
-            <div class="buttons"><button class="cv"> <a href="P:\Pictures\Nalaiya Thiran\S PRAGNASYA.pdf"> Download CV</a></button>
+            <p2 class="para">Web Developer</p2>
+            <div class="buttons"><button class="cv"> <a href="C:\IBM-Project-23251-1659874556\Assignments\Team Lead - T N Sangeetha"> Download CV</a></button>
                 <button class="hire"> <a href="#contact"> Hire Me</a></button>
             </div>
         </div>
         <div class="middle">
             <div class="about">
                 <h2>About Me <br><br></h2>
-                <p>Hello! I'm T N Sangeetha. I am passionate about UI/UX design and <br> Web Design.
-                    I am a skilled Front-end Developer and master of <br> Graphics Design tools such as Photoshop and
-                    Sketch.
+                <p>To begin my career in a
+dynamic environment where I
+have opportunities to get
+experience and expertise and
+to future enhance my career
+prospertise. A person with
+entrepreneurship skills and
+motivational person and good
+at vocabulary.
                 </p>
             </div>
             <div class="table1">
@@ -84,6 +90,20 @@
                             </div>
                         </div>
                         <div class="mb-2"><span>JavaScript</span>
+                            <div class="progress my-1">
+                                <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
+                                    data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%"
+                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+				<div class="mb-2"><span>C</span>
+                            <div class="progress my-1">
+                                <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
+                                    data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%"
+                                    aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+				<div class="mb-2"><span>Python</span>
                             <div class="progress my-1">
                                 <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right"
                                     data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%"
