--- a/Assignments/Team Member 1 - Pavitra E/Assignment 1/index.html
+++ b/Assignments/Team Member 1 - Pavitra E/Assignment 1/index.html
@@ -2,208 +2,235 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
+    <script
+      src="https://kit.fontawesome.com/1625eab60d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   </head>
-  <body>
-    <div class="resume">
-      <div class="resume_left">
-        <div class="resume_profile">
-          <img src="photo.jpeg" alt="profile_pic" />
-        </div>
-        <div class="resume_content">
-          <div class="resume_item resume_info">
-            <div class="title">
-              <p class="bold">Pavitra E</p>
-              <p class="regular">Student</p>
-            </div>
-            <ul>
-              <li>
-                <div class="icon">
-                  <i class="fas fa-map-signs"></i>
-                </div>
-                <div class="data">
-                  No:11/7 Ramaswamy st., <br />
-                  Vetri Nagar, Chennai-82
-                </div>
-              </li>
-              <li>
-                <div class="icon">
-                  <i class="fas fa-mobile-alt"></i>
-                </div>
-                <div class="data">+91 7092638909</div>
-              </li>
-              <li>
-                <div class="icon">
-                  <i class="fas fa-envelope"></i>
-                </div>
-                <div class="data">pavi19203.it@rmkec.ac.in</div>
-              </li>
-            </ul>
-          </div>
-          <div class="resume_item resume_skills">
-            <div class="title">
-              <p class="bold">skill's</p>
-            </div>
-            <ul>
-              <li>
-                <div class="skill_name">C</div>
-                <div class="skill_progress">
-                  <span style="width: 70%"></span>
-                </div>
-                <div class="skill_per">70%</div>
-              </li>
-              <li>
-                <div class="skill_name">Python</div>
-                <div class="skill_progress">
-                  <span style="width: 80%"></span>
-                </div>
-                <div class="skill_per">80%</div>
-              </li>
-              <li>
-                <div class="skill_name">Java</div>
-                <div class="skill_progress">
-                  <span style="width: 70%"></span>
-                </div>
-                <div class="skill_per">70%</div>
-              </li>
-              <li>
-                <div class="skill_name">JS</div>
-                <div class="skill_progress">
-                  <span style="width: 70%"></span>
-                </div>
-                <div class="skill_per">70%</div>
-              </li>
-              <li>
-                <div class="skill_name">Angular</div>
-                <div class="skill_progress">
-                  <span style="width: 75%"></span>
-                </div>
-                <div class="skill_per">75%</div>
-              </li>
-              <li>
-                <div class="skill_name">React</div>
-                <div class="skill_progress">
-                  <span style="width: 70%"></span>
-                </div>
-                <div class="skill_per">70%</div>
-              </li>
-              <li>
-                <div class="skill_name">HTML</div>
-                <div class="skill_progress">
-                  <span style="width: 90%"></span>
-                </div>
-                <div class="skill_per">90%</div>
-              </li>
-            </ul>
-          </div>
-          <div class="resume_item resume_social">
-            <div class="title">
-              <p class="bold">Social</p>
-            </div>
-            <ul>
-              <li>
-                <div class="icon">
-                  <i class="fab fa-facebook-square"></i>
-                </div>
-                <div class="data">
-                  <p class="semi-bold">Facebook</p>
-                  <p>pavitra@facebook</p>
-                </div>
-              </li>
 
-              <li>
-                <div class="icon">
-                  <i class="fab fa-linkedin"></i>
+  <body>
+    <div class="header">
+      <div class="name">Pavitra E</div>
+      <div class="icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+    </div>
+
+    <div class="container1">
+      <div class="upper">
+        <div class="image1">
+          <img src="photo.jpeg" alt="image" />
+        </div>
+        <h1 class="name1 mt-4">Pavitra E</h1>
+        <p2 class="para mr-4">Web Developer</p2>
+        <div class="buttons">
+          <button class="cv">
+            <a href="Resume.pdf"> Download CV</a>
+          </button>
+          <button class="hire"><a href="#contact"> Hire Me</a></button>
+        </div>
+      </div>
+      <div class="middle">
+        <div class="about">
+          <h2>About Me <br /><br /></h2>
+          <p>
+            To secure a challenging position in a reputable organization to
+            expand my learnings, knowledge, and skills. Secure a responsible
+            career opportunity to fully utilize my training and skills, while
+            making a significant contribution to the success of the company.
+            <br />
+          </p>
+        </div>
+        <div class="table1">
+          <table>
+            <tr>
+              <th>Age:</th>
+              <td>20</td>
+            </tr>
+
+            <tr>
+              <th>Email:</th>
+              <td>pavitraeswaran@gmail.com</td>
+            </tr>
+
+            <tr>
+              <th>Phone:</th>
+              <td>+91 7092638909</td>
+            </tr>
+            <tr>
+              <th>Address:</th>
+              <td>No: 11/7 Ramaswamy St, Vetri Nagar, Chennai - 82</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <hr />
+      <div class="lower">
+        <div class="about">
+          <h2>Professional Skills<br /></h2>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-2">
+                <span>HTML</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-primary"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="100"
+                    data-aos-anchor=".skills-section"
+                    style="width: 90%"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
                 </div>
-                <div class="data">
-                  <p class="semi-bold">Linkedin</p>
-                  <p>pavitra-e-564b631ab@linkedin</p>
+              </div>
+              <div class="mb-2">
+                <span>CSS</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-primary"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="200"
+                    data-aos-anchor=".skills-section"
+                    style="width: 85%"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
                 </div>
-              </li>
-            </ul>
+              </div>
+              <div class="mb-2">
+                <span>JavaScript</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-primary"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="300"
+                    data-aos-anchor=".skills-section"
+                    style="width: 75%"
+                    aria-valuenow="75"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="mb-2">
+                <span>React</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="400"
+                    data-aos-anchor=".skills-section"
+                    style="width: 80%"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <div class="mb-2">
+                <span>Angular</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="500"
+                    data-aos-anchor=".skills-section"
+                    style="width: 85%"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <div class="mb-2">
+                <span>Flask</span>
+                <div class="progress my-1">
+                  <div
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    data-aos="zoom-in-right"
+                    data-aos-delay="600"
+                    data-aos-anchor=".skills-section"
+                    style="width: 75%"
+                    aria-valuenow="75"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="resume_right">
-        <div class="resume_item resume_about">
-          <div class="title">
-            <p class="bold">Career Objective</p>
+      <hr />
+      <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
+        <h2>Contact Me</h2>
+        <div class="row">
+          <div class="col-md-15 d-print-none">
+            <div class="my-2">
+              <div class="row">
+                <div class="col-6">
+                  <input
+                    class="form-control"
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Your Name"
+                    required
+                  />
+                </div>
+                <div class="col-6">
+                  <input
+                    class="form-control"
+                    type="email"
+                    id="email"
+                    name="_replyto"
+                    placeholder="Your E-mail"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="form-group my-2">
+                <textarea
+                  class="form-control"
+                  style="resize: none"
+                  id="message"
+                  name="message"
+                  rows="4"
+                  placeholder="Your Message"
+                  required
+                ></textarea>
+              </div>
+              <button class="btn btn-primary mt-2" type="submit">Send</button>
+            </div>
           </div>
-          <p>
-            To work in a reputable organization where I can utilize my existing
-            skills to contribute to the success of the company and to acquire
-            new skills.
-          </p>
-        </div>
-        <div class="resume_item resume_work">
-          <div class="title">
-            <p class="bold">Work Experience</p>
-          </div>
-          <ul>
-            <li>
-              <div class="date">Aug 2022 - Present</div>
-              <div class="info">
-                <p class="semi-bold">Kaar Technologies</p>
-                <p>
-                  Created a Sales Prediction application using ML, Angular and
-                  Flask
-                </p>
-              </div>
-            </li>
-            <li>
-              <div class="date">Aug 2021 - Sep 2021</div>
-              <div class="info">
-                <p class="semi-bold">LetsGrowMore</p>
-                <p>
-                  Created a webpage using HTML / CSS and a website using ReactJS
-                </p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="resume_item resume_education">
-          <div class="title">
-            <p class="bold">Education</p>
-          </div>
-          <ul>
-            <li>
-              <div class="date">Aug 2019 - Present</div>
-              <div class="info">
-                Bachelor of Techology - Information Technology
-                <p class="semi-bold">RMK Engineering College</p>
-                <p>CGPA : 9.26</p>
-              </div>
-            </li>
-            <li>
-              <div class="date">May 2019</div>
-              <div class="info">
-                12th Standard
-                <p class="semi-bold">St. Mary's Mat. Girls Hr. Sec. School</p>
-                <p>Percentage: 91%</p>
-              </div>
-            </li>
-            <li>
-              <div class="date">May 2017</div>
-              <div class="info">
-                10th Standard
-                <p class="semi-bold">St. Mary's Mat. Girls Hr. Sec. School</p>
-                <p>Percentage: 98%</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="resume_item resume_hobby">
-          <div class="title">
-            <p class="bold">Hobby</p>
-          </div>
-          <ul>
-            <li><i class="fas fa-book"></i></li>
-            <li><i class="fas fa-music"></i></li>
-          </ul>
         </div>
       </div>
     </div>
+
+    <div class="footer"></div>
   </body>
 </html>
