--- a/Assignments/Team Member 2 - Tanusha N/Assignment 3/chatbot integrated web/index.html
+++ b/Assignments/Team Member 2 - Tanusha N/Assignment 3/chatbot integrated web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Management Bot</title>
+    <title>Banking Bot</title>
     <!-- CSS only -->
     <!-- JavaScript Bundle with Popper -->
 
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Hospital Management</a>
+      <a class="navbar-brand" href="#">Banking</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
